# RoboCup_ESC

./: CMakeLists.txt  README.md  angle.txt  partitions.csv
main/: CMakeLists.txt  as5600.c  as5600.h  as5600_types.h  bldc_pwm.c  bldc_pwm.h  gpio_led.c  gpio_led.h  led.c  led.h  main.c  memory_flash.c  memory_flash.h  types.h  uart_console.c  uart_console.h
src/: CMakeLists.txt  main.c
